--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   hooks_riverpod: ^2.3.2
   http: ^0.13.5
+  go_router: ^6.5.5
 
 dev_dependencies:
   flutter_test:
