--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   hooks_riverpod: ^2.3.2
   http: ^0.13.5
   go_router: ^6.5.5
+  flutter_smartlook: ^4.1.1
 
 dev_dependencies:
   flutter_test:
