--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http: ^0.13.5
   go_router: ^6.5.5
   flutter_smartlook: ^4.1.1
+  riverpod_annotation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +25,7 @@ dev_dependencies:
   change_app_package_name: ^1.1.0
 
   flutter_lints: ^2.0.0
+  riverpod_generator: ^2.2.0
 
 flutter:
   uses-material-design: true
